# tiny_fcgi_server

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
cmake/: FindFcgi.cmake  FindRapidJson.cmake
error/: exception.h
server/: CMakeLists.txt  environment.cpp  environment.h  main.cpp  request_handler.h  server.cpp  server.h
server/test/: environment_test.cpp
tools/: CMakeLists.txt  url_escape.cpp  url_escape.h
tools/test/: url_escape_test.cpp
